# studae

./: .gitignore  CLAUDE.md  LAUNCH.md  README.md  TODOS.md
study-app-backend/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
study-app-backend/app/: __init__.py  assess.py  auth.py  billing.py  chat.py  clients.py  config.py  flashcards.py  focus.py  ingest.py  main.py  permissions.py  retry.py  revise.py
study-app-backend/docs/: backend-status.md  build-plan.md  database.md  frontend-integration.md  schema.sql  user-flow.md
study-app-backend/scripts/: check_models.py  check_status.py  eval_grading.py  get_token.py  set_plan.py  usage_total.py
study-app-backend/tests/: integration_test.py  isolation_test.py  smoke_test.py
study-app-backend/tests/unit/: conftest.py  test_assess_format.py  test_chapters.py  test_embed.py  test_extractors.py  test_ingest_formats.py  test_ingest_resumable.py  test_pure_fns.py  test_upload_api.py  test_usage_ctx.py
study-app-frontend/: .env.example  .gitignore  DESIGN.md  README.md  app.json  package-lock.json  package.json
study-app-frontend/scripts/: probe-backend.mjs
study-app-frontend/src/app/: _layout.tsx  index.tsx  profile.tsx  reading.tsx  upload.tsx
study-app-frontend/src/app/(app)/: _layout.tsx  home.tsx
study-app-frontend/src/app/(auth)/: _layout.tsx  check-inbox.tsx  reset-password.tsx  reset.tsx  sign-in.tsx  sign-up.tsx
study-app-frontend/src/app/history/: [docId].tsx
study-app-frontend/src/app/ingest/: [id].tsx
study-app-frontend/src/app/learn/: ask.tsx  level.tsx  photo.tsx  teach.tsx
study-app-frontend/src/app/progress/: [docId].tsx
study-app-frontend/src/app/revision/: [id].tsx
study-app-frontend/src/app/summary/: [docId].tsx
study-app-frontend/src/app/test/: create.tsx  photo-answer.tsx
study-app-frontend/src/components/: AuthProvider.tsx
study-app-frontend/src/lib/: api.ts  deeplink.ts  format.ts  supabase.ts  theme.ts  token-cache.ts  tts.ts  types.ts  upgrade.ts
(+43 files in other folders)
