[project]
name = "study-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentry-sdk[fastapi]>=2.61.1",
    "slowapi>=0.1.9",
    "supabase>=2.30.1",
    "uvicorn>=0.39.0",
]

[tool.ruff.lint.per-file-ignores]
# main.py imports submodules after load_dotenv() on purpose — clients.py
# reads os.environ at import time and needs the .env loaded first.
"app/main.py" = ["E402"]
