[project]
name = "study-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "cryptography>=42.0.0",
    "fastapi>=0.128.8",
    "google-genai>=1.47.0",
    "openai>=2.41.1",
    "pyjwt>=2.13.0",
    "pymupdf>=1.26.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sentry-sdk[fastapi]>=2.61.1",
    "slowapi>=0.1.9",
    "supabase>=2.30.1",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
# Only collect the unit suite under tests/unit. Restricting python_files to
# the test_*.py prefix means the legacy live scripts (tests/*_test.py, e.g.
# smoke_test.py / integration_test.py / isolation_test.py) are NOT collected
# even though they sit under tests/ — they hit real services and take args.
testpaths = ["tests/unit"]
python_files = ["test_*.py"]

[tool.ruff.lint.per-file-ignores]
# main.py imports submodules after load_dotenv() on purpose — clients.py
# reads os.environ at import time and needs the .env loaded first.
"app/main.py" = ["E402"]
